src/objects/User_Control_Consideration__c.object
<CustomObject>
    <fields>
        <fullName>Control_Area__c</fullName>
        <label>Control Area</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explanation_if_not_relevant__c</fullName>
        <label>Explanation if not relevant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSAE_16_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSAE-16 Review</label>
        <referenceTo>SSAE_16_Review__c</referenceTo>
        <relationshipLabel>User Control Considerations</relationshipLabel>
        <relationshipName>User_Control_Considerations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UCC_Description__c</fullName>
        <label>UCC Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UCC_Number__c</fullName>
        <label>UCC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCC_Relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UCC Relevant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Organization_Control_Description__c</fullName>
        <label>User Organization Control Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>User Control Consideration</label>
    <nameField>
        <label>User Control Consideration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Control Considerations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>